--- a/css/style.css
+++ b/css/style.css
@@ -102,39 +102,162 @@ body {
 
 #container-buttons-light {
     background-color: yellow;
+    height: 7vh;
     width: 100%;
-    height: auto;
-}
+    }
 
 #container-buttons-control {
     background-color: red;
     width: 100%;
-    height: auto;
+    height: 17vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #container-buttons-grill {
     background-color: blueviolet;
     width: 100%;
-    height: auto;
+    height: 10vh;
 }
 
 #container-buttons-start {
     background-color: whitesmoke;
     width: 100%;
-    height: auto;
+    height: 2vh;
 }
 
 #container-buttons-small {
     background-color: olivedrab;
     width: 100%;
-    height: auto;
+    height: 7vh;
 }
 
-#container-buttons-down {
-    background-color: blue;
-    width: 100%;
-    height: auto;
+#control-arrows {
+    border: 7px double grey;
+    border-radius: 50%;
+    background-color: black;
+    height: 15vh;
+    width: 8vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
+
+#control-buttons {
+    border-radius: 25px;
+    background-color: black;
+    height: 8vh;
+    width: 8vw;
+}
+
+.arrows {
+    display: flex;
+    height: 3vh;
+    width: 6vw;
+    
+}
+
+#arrows-top {
+    height: 3.5vh;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#top-left {
+    background-color: black;
+    height: 3vh;
+    width: 2vw;
+    border-top-left-radius: 50%;
+}
+
+#top-center {
+    background-color: grey;
+    height: 3vh;
+    width: 2vw;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    margin-bottom: -3px;
+    position: absolute;
+}
+
+#top-right {
+    background-color: black;
+    height: 3vh;
+    width: 2vw;
+    border-top-right-radius: 50%;
+}
+
+#arrows-center {
+    height: 3.5vh;
+}
+
+#center-left {
+    background-color: grey;
+    height: 3.5vh;
+    width: 2vw;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
+
+#center-center {
+    height: 3.5vh;
+    width: 2vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#circle {
+    background: linear-gradient(to bottom, grey, black);
+    height: 5.4vh;
+    width: 2.8vw;
+    position: absolute;    
+    z-index: 1;
+    border-radius: 50%;
+       
+}
+
+#center-right {
+    background-color: grey;
+    height: 3.5vh;
+    width: 2vw;
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 7px;
+}
+
+#arrows-bottom {
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+}
+
+#bottom-left {
+    background-color: black;
+    height: 3vh;
+    width: 2vw;
+    border-bottom-left-radius: 50%;
+}
+
+#bottom-center {
+    background-color: grey;
+    height: 3.5vh;
+    width: 2vw;
+    border-bottom-left-radius: 7px;
+    border-bottom-right-radius: 7px;
+    }
+
+
+#bottom-right {
+    background-color: black;
+    height: 3vh;
+    width: 2vw;
+    border-bottom-right-radius: 50%;
+}
+
 
 
 
