--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
     height: 43vh;
     width: 25vw;
     background-color: green;
+    border-radius: 15px;
 }
 
 /*Borde de arriba*/
@@ -26,24 +27,184 @@ body {
     height: 4vh;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+#screen-up-left {
+    background-color: rgb(82, 76, 76);
+    width: 33%;
+    height: 100%;
+    border-top-left-radius: 15px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#screen-up-center {
+    background-color: rgb(82, 76, 76);
+    width: 34%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#screen-up-right {
+    background-color: rgb(82, 76, 76);
+    width: 33%;
+    height: 100%;
+    border-top-right-radius: 15px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+/*Boton-borde-izquierda*/
+#sc-up-lft {
+    background: linear-gradient(to bottom, rgb(117, 108, 108), rgb(23, 21, 21));
+    border-radius: 50%;
+    width: 1.5vw;
+    height: 3vh;
+    margin-left: 0.5vw;
+    border: 0.1px solid black;
+}
+
+/*Boton-borde-centro*/
+#sc-up-cnt {
+    background-color: rgb(91, 85, 85);
+    border-radius: 50%;
+    width: 1.25vw;
+    height: 2.5vh;
+}
+
+/*Boton-borde-derecha*/
+#sc-up-rght {
+    background: linear-gradient(to bottom, rgb(117, 108, 108), rgb(23, 21, 21));
+    border-radius: 50%;
+    width: 1.5vw;
+    height: 3vh;
+    margin-right: 0.5vw;
+    border: 0.1px solid black;
 }
 
 /*Pantalla*/
 #screen-screen {
-    background-color: yellow;
+    background-color: rgb(82, 76, 76);
     width: 100%;
     height: 35vh;
-    display: flex;    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*Cuadrado que engloba la pantalla*/
+#gmb-adv-sp {
+    background-color: black;
+    width: 20vw;
+    height: 35vh;
+    border: 4px inset grey;
+
+}
+
+/*Margen de arriba*/
+#gmb-up {
+    width: 20vw;
+    height: 2vh;
+    background-color: black;
+}
+
+/*La propia Pantalla*/
+#final-screen {
+    border: 2px double rgb(53, 51, 51);
+    background-image: linear-gradient(to top right, rgb(27, 26, 26), grey);
+    width: 18vw;
+    height: 29vh;
+    margin-left: 1vw;
+}
+
+/*Margen de abajo*/
+#gmb-down {
+    width: 20vw;
+    height: 4vh;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+/*Imagen Título Gameboy*/
+#gmb-title {
+    width: 12vw;
+    height: 3vh;
+    background-color: black;
+    background-image: url(../images/gameboy-adv-sp.png);
+    background-size: cover;
 }
 
 /*Borde de abajo */
 #screen-down {
-    background-color: red;
+    background-color: rgb(82, 76, 76);
     width: 100%;
     height: 4vh;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
+
+#screen-down-left {
+    background-color: rgb(82, 76, 76);
+    width: 33%;
+    height: 3vh;
+    margin-top: 2px;
+    border-bottom-left-radius: 15px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#screen-down-center {
+    background-color: rgb(82, 76, 76);
+    width: 34%;
+    height: 3vh;
+    margin-top: 2px;
+}
+
+#screen-down-right {
+    background-color: rgb(82, 76, 76);
+    width: 33%;
+    height: 3vh;
+    margin-top: 2px;
+    border-bottom-right-radius: 15px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+/*Boton abajo izquierda*/
+#sc-dwn-lft {
+    margin-left: 0.5vw;
+    background-color: rgb(91, 85, 85);
+    border-radius: 50%;
+    width: 1.25vw;
+    height: 2.5vh;
+}
+
+#sc-dwn-rght {
+    background-color: rgb(91, 85, 85);
+    border-radius: 50%;
+    width: 1.25vw;
+    height: 2.5vh;
+    margin-right: 0.5vw;    
+}
+
+
+
+
 
 /*Eje central de la consola */
 .container-axis {
@@ -100,12 +261,14 @@ body {
     background-color: green;
 }
 
+/*Control-luz*/
 #container-buttons-light {
     background-color: yellow;
     height: 7vh;
     width: 100%;
-    }
+}
 
+/*Control-botones*/
 #container-buttons-control {
     background-color: red;
     width: 100%;
@@ -115,18 +278,21 @@ body {
     align-items: center;
 }
 
+/*Control-rejilla*/
 #container-buttons-grill {
     background-color: blueviolet;
     width: 100%;
     height: 10vh;
 }
 
+/*Control-select-start*/
 #container-buttons-start {
     background-color: whitesmoke;
     width: 100%;
     height: 2vh;
 }
 
+/*Control-borde-abajo*/
 #container-buttons-small {
     background-color: olivedrab;
     width: 100%;
@@ -156,9 +322,9 @@ body {
     display: flex;
     height: 3vh;
     width: 6vw;
-    
 }
 
+/*Flechas*/
 #arrows-top {
     height: 3.5vh;
     border-top-left-radius: 50%;
@@ -216,10 +382,10 @@ body {
     background: linear-gradient(to bottom, grey, black);
     height: 5.4vh;
     width: 2.8vw;
-    position: absolute;    
+    position: absolute;
     z-index: 1;
     border-radius: 50%;
-       
+
 }
 
 #center-right {
@@ -248,7 +414,7 @@ body {
     width: 2vw;
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
-    }
+}
 
 
 #bottom-right {
@@ -257,7 +423,3 @@ body {
     width: 2vw;
     border-bottom-right-radius: 50%;
 }
-
-
-
-
