--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ body {
     width: 20vw;
     height: 35vh;
     border: 4px inset grey;
-
 }
 
 /*Margen de arriba*/
@@ -132,7 +131,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 /*Imagen Título Gameboy*/
@@ -202,10 +200,6 @@ body {
     margin-right: 0.5vw;    
 }
 
-
-
-
-
 /*Eje central de la consola */
 .container-axis {
     margin-left: -0.5vw;
@@ -259,6 +253,7 @@ body {
     height: 43vh;
     width: 25vw;
     background-color: green;
+    border-radius: 15px;
 }
 
 /*Control-luz*/
@@ -266,11 +261,80 @@ body {
     background-color: yellow;
     height: 7vh;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;    
+}
+
+/*Div vacío*/
+#light-nothing {
+    width: 33%;
+    height: 100%;
+    background-color: rgb(82, 76, 76);
+    border-top-left-radius: 15px;    
+}
+
+/*Div contenedor del botón de brillo*/
+#light-button {
+    width: 34%;
+    height: 100%;
+    background-color: rgb(82, 76, 76);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/*Botón del brillo*/
+#light-button-circle {
+    width: 4vh;
+    height: 4vh;
+    border-radius: 50%;
+    background-color: grey;
+    border: 0.5px inset grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*Icono del brillo*/
+#icon {
+    width: 1px;
+    height: 1px;
+    margin-bottom: 3vh;
+    margin-right: 1.45vw;       
+}
+
+/* Div Luces de encendido*/
+#light-2lights {
+    width: 33%;
+    height: 100%;
+    background-color: rgb(82, 76, 76);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    border-top-right-radius: 15px;
+}
+
+/*Luces de encendido*/
+.lightlight {
+    width: 1vw;
+    height: 1vh; 
+    background: linear-gradient(to bottom, rgb(134, 130, 130), rgb(175, 165, 165));   
+    
+}
+
+#lights-space {
+    background-color: rgb(82, 76, 76);
+    width: 1vw;
+    height: 1vh;
 }
 
 /*Control-botones*/
 #container-buttons-control {
-    background-color: red;
+    background-color: rgb(82, 76, 76);
     width: 100%;
     height: 17vh;
     display: flex;
@@ -280,29 +344,41 @@ body {
 
 /*Control-rejilla*/
 #container-buttons-grill {
-    background-color: blueviolet;
+    background-color: rgb(82, 76, 76);
     width: 100%;
     height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /*Control-select-start*/
 #container-buttons-start {
-    background-color: whitesmoke;
+    background-color: rgb(82, 76, 76);
     width: 100%;
     height: 2vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
-/*Control-borde-abajo*/
+/*Control-botones-select/start-abajo*/
 #container-buttons-small {
-    background-color: olivedrab;
+    background-color: rgb(82, 76, 76);
     width: 100%;
     height: 7vh;
+    display: flex;
+    justify-content: center;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    
 }
 
+/*Contenedor de todas las direcciones*/
 #control-arrows {
-    border: 7px double grey;
+    border: 7px inset grey;
     border-radius: 50%;
-    background-color: black;
+    background-color: rgb(82, 76, 76);
     height: 15vh;
     width: 8vw;
     display: flex;
@@ -311,11 +387,17 @@ body {
     flex-direction: column;
 }
 
+/*Contenedor botones A y B*/
 #control-buttons {
     border-radius: 25px;
-    background-color: black;
+    background-color: rgb(82, 76, 76);
     height: 8vh;
     width: 8vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transform: rotate(135deg);
+    border: 4px outset grey;
 }
 
 .arrows {
@@ -335,7 +417,7 @@ body {
 }
 
 #top-left {
-    background-color: black;
+    background-color: rgb(82, 76, 76);
     height: 3vh;
     width: 2vw;
     border-top-left-radius: 50%;
@@ -352,7 +434,7 @@ body {
 }
 
 #top-right {
-    background-color: black;
+    background-color: rgb(82, 76, 76);
     height: 3vh;
     width: 2vw;
     border-top-right-radius: 50%;
@@ -379,7 +461,7 @@ body {
 }
 
 #circle {
-    background: linear-gradient(to bottom, grey, black);
+    background: linear-gradient(to bottom, grey, rgb(43, 40, 40));
     height: 5.4vh;
     width: 2.8vw;
     position: absolute;
@@ -402,7 +484,7 @@ body {
 }
 
 #bottom-left {
-    background-color: black;
+    background-color: rgb(82, 76, 76);
     height: 3vh;
     width: 2vw;
     border-bottom-left-radius: 50%;
@@ -418,8 +500,91 @@ body {
 
 
 #bottom-right {
-    background-color: black;
+    background-color: rgb(82, 76, 76);
     height: 3vh;
     width: 2vw;
     border-bottom-right-radius: 50%;
 }
+
+/*Botones A y B*/
+.A-B {
+    width: 2.5vw;
+    height: 5vh;
+    background-color: grey;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1.5px outset rgb(75, 58, 58);
+    transform: rotate(225deg);
+}
+
+/*Dos divs vacios, al lado de la rejilla*/
+.grill-empty {
+    width: 40%;
+    height: 100%;
+    background-color: rgb(82, 76, 76);
+}
+
+/*Rejilla*/
+#grill-grill {
+    width: 20%;
+    height: 100%;
+    background-color: rgb(82, 76, 76);
+    margin-bottom: 7vh;
+}
+
+.container-big-point {
+    display: flex;
+    width: 100%;
+    height: 25%;
+}
+
+.container-point {
+    width: 25%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.point {
+    background-color: black;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+}
+
+#select {
+    background-color: rgb(82, 76, 76);
+    height: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin-right: 1vw;
+   
+
+}
+
+#start {
+    background-color: rgb(82, 76, 76);
+    width: 50%;  
+    height: 100%;  
+}
+
+.ss {
+    text-shadow: 0.1vw 0.1vh  rgb(117, 108, 108);
+    color: grey;
+    font-size: 10px;   
+}
+
+.small-buttons {
+    width: 4vh;
+    height: 4vh;
+    border-radius: 50%;
+    background-color: grey;
+    border: 1px inset grey;
+    margin: 0 0.7vw 0 0.6vw;
+}
+
