--- a/css/style.css
+++ b/css/style.css
@@ -2,27 +2,33 @@ body {
     margin: 0;
 }
 
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.background {
+    background-color: rgb(82, 76, 76);
+}
+
 /*Contenedor principal */
 .container {
     background-color: aqua;
     height: 100vh;
     width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 /*Pantalla y borde de la pantalla */
 .container-screen {
     height: 43vh;
     width: 25vw;
-    background-color: green;
     border-radius: 15px;
+    border: 1.5px solid black;
 }
 
 /*Borde de arriba*/
 #screen-up {
-    background-color: blue;
     width: 100%;
     height: 4vh;
     display: flex;
@@ -33,7 +39,6 @@ body {
 }
 
 #screen-up-left {
-    background-color: rgb(82, 76, 76);
     width: 33%;
     height: 100%;
     border-top-left-radius: 15px;
@@ -43,16 +48,11 @@ body {
 }
 
 #screen-up-center {
-    background-color: rgb(82, 76, 76);
     width: 34%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 #screen-up-right {
-    background-color: rgb(82, 76, 76);
     width: 33%;
     height: 100%;
     border-top-right-radius: 15px;
@@ -91,12 +91,8 @@ body {
 
 /*Pantalla*/
 #screen-screen {
-    background-color: rgb(82, 76, 76);
     width: 100%;
     height: 35vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 /*Cuadrado que engloba la pantalla*/
@@ -129,9 +125,6 @@ body {
     width: 20vw;
     height: 4vh;
     background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 /*Imagen Título Gameboy*/
@@ -145,7 +138,6 @@ body {
 
 /*Borde de abajo */
 #screen-down {
-    background-color: rgb(82, 76, 76);
     width: 100%;
     height: 4vh;
     display: flex;
@@ -156,7 +148,6 @@ body {
 }
 
 #screen-down-left {
-    background-color: rgb(82, 76, 76);
     width: 33%;
     height: 3vh;
     margin-top: 2px;
@@ -167,14 +158,12 @@ body {
 }
 
 #screen-down-center {
-    background-color: rgb(82, 76, 76);
     width: 34%;
     height: 3vh;
     margin-top: 2px;
 }
 
 #screen-down-right {
-    background-color: rgb(82, 76, 76);
     width: 33%;
     height: 3vh;
     margin-top: 2px;
@@ -207,8 +196,8 @@ body {
     width: 26vw;
     height: 6vh;
     border-radius: 15px;
-    background-color: violet;
     display: flex;
+    border: 1.5px solid black;
 }
 
 #container-axis-1 {
@@ -253,13 +242,12 @@ body {
 .container-buttons {
     height: 43vh;
     width: 25vw;
-    background-color: green;
     border-radius: 15px;
+    border: 1.5px solid black;
 }
 
 /*Control-luz*/
 #container-buttons-light {
-    background-color: yellow;
     height: 7vh;
     width: 100%;
     display: flex;
@@ -273,7 +261,6 @@ body {
 #light-nothing {
     width: 33%;
     height: 100%;
-    background-color: rgb(82, 76, 76);
     border-top-left-radius: 15px;    
 }
 
@@ -281,10 +268,6 @@ body {
 #light-button {
     width: 34%;
     height: 100%;
-    background-color: rgb(82, 76, 76);
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 
@@ -295,9 +278,6 @@ body {
     border-radius: 50%;
     background-color: grey;
     border: 0.5px inset grey;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 /*Icono del brillo*/
@@ -312,7 +292,6 @@ body {
 #light-2lights {
     width: 33%;
     height: 100%;
-    background-color: rgb(82, 76, 76);
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -324,19 +303,15 @@ body {
     width: 1vw;
     height: 1vh; 
     background: linear-gradient(to bottom, rgb(134, 130, 130), rgb(175, 165, 165));   
-    
 }
 
 #lights-space {
-    background-color: rgb(82, 76, 76);
     width: 1vw;
     height: 1vh;
 }
 
-
 /*Control-botones*/
 #container-buttons-control {
-    background-color: rgb(82, 76, 76);
     width: 100%;
     height: 17vh;
     display: flex;
@@ -346,17 +321,12 @@ body {
 
 /*Control-rejilla*/
 #container-buttons-grill {
-    background-color: rgb(82, 76, 76);
     width: 100%;
     height: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 /*Control-select-start*/
 #container-buttons-start {
-    background-color: rgb(82, 76, 76);
     width: 100%;
     height: 2vh;
     display: flex;
@@ -366,33 +336,26 @@ body {
 
 /*Control-botones-select/start-abajo*/
 #container-buttons-small {
-    background-color: rgb(82, 76, 76);
     width: 100%;
     height: 7vh;
     display: flex;
     justify-content: center;
     border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    
+    border-bottom-right-radius: 15px;    
 }
 
 /*Contenedor de todas las direcciones*/
 #control-arrows {
     border: 7px inset grey;
     border-radius: 50%;
-    background-color: rgb(82, 76, 76);
     height: 15vh;
     width: 8vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
 }
 
 /*Contenedor botones A y B*/
 #control-buttons {
     border-radius: 25px;
-    background-color: rgb(82, 76, 76);
     height: 8vh;
     width: 8vw;
     display: flex;
@@ -413,13 +376,9 @@ body {
     height: 3.5vh;
     border-top-left-radius: 50%;
     border-top-right-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 #top-left {
-    background-color: rgb(82, 76, 76);
     height: 3vh;
     width: 2vw;
     border-top-left-radius: 50%;
@@ -436,7 +395,6 @@ body {
 }
 
 #top-right {
-    background-color: rgb(82, 76, 76);
     height: 3vh;
     width: 2vw;
     border-top-right-radius: 50%;
@@ -457,9 +415,6 @@ body {
 #center-center {
     height: 3.5vh;
     width: 2vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 #circle {
@@ -469,7 +424,6 @@ body {
     position: absolute;
     z-index: 1;
     border-radius: 50%;
-
 }
 
 #center-right {
@@ -486,7 +440,6 @@ body {
 }
 
 #bottom-left {
-    background-color: rgb(82, 76, 76);
     height: 3vh;
     width: 2vw;
     border-bottom-left-radius: 50%;
@@ -502,7 +455,6 @@ body {
 
 
 #bottom-right {
-    background-color: rgb(82, 76, 76);
     height: 3vh;
     width: 2vw;
     border-bottom-right-radius: 50%;
@@ -514,9 +466,6 @@ body {
     height: 5vh;
     background-color: grey;
     border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     border: 1.5px outset rgb(75, 58, 58);
     transform: rotate(225deg);
 }
@@ -525,14 +474,12 @@ body {
 .grill-empty {
     width: 40%;
     height: 100%;
-    background-color: rgb(82, 76, 76);
 }
 
 /*Rejilla*/
 #grill-grill {
     width: 20%;
     height: 100%;
-    background-color: rgb(82, 76, 76);
     margin-bottom: 7vh;
 }
 
@@ -545,9 +492,6 @@ body {
 .container-point {
     width: 25%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .point {
@@ -558,19 +502,15 @@ body {
 }
 
 #select {
-    background-color: rgb(82, 76, 76);
     height: 100%;
     width: 50%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     margin-right: 1vw;
-   
-
 }
 
 #start {
-    background-color: rgb(82, 76, 76);
     width: 50%;  
     height: 100%;  
 }
